--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Мое Портфолио</h1>
+        <h1>gjhna</h1>
+        <h1>QAAAAAAA</h1>
     </header>
     <nav>
         <div class="social-icons">
