--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Мое Портфолиоjjjjjj</h1>
-
+        <h1>Мое Портфолио</h1>
     </header>
     <nav>
         <div class="social-icons">
